chore: avoid hidding GitHub links on mobile devices

--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -581,10 +581,6 @@ ul#toc,#toc li {
   margin-top: 17px;
   color: @gray-lighter;
 
-  @media (max-width: @screen-xs-max) {
-    display: none;
-  }
-
   .icon {
     color: #000;
     font-size: 24px;
